{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 234,
  "lineage": "347c58b3-1f6a-b5c7-74e5-80407462d68a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a9b9b24efd1e5763",
            "domain": "vpc",
            "id": "eipalloc-0a9b9b24efd1e5763",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-167-118-24.compute-1.amazonaws.com",
            "public_ip": "54.167.118.24",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:144063462472:internet-gateway/igw-072bbaac5b6fab4ef",
            "id": "igw-072bbaac5b6fab4ef",
            "owner_id": "144063462472",
            "tags": {
              "Name": "MyProject-IG"
            },
            "tags_all": {
              "Name": "MyProject-IG"
            },
            "vpc_id": "vpc-05a9b070323aad98c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a9b9b24efd1e5763",
            "association_id": "eipassoc-0ccf6ecdfaeb16b56",
            "connectivity_type": "public",
            "id": "nat-0d0284c69b1aee0e8",
            "network_interface_id": "eni-0137d7e0d5c29c65b",
            "private_ip": "190.160.4.80",
            "public_ip": "54.167.118.24",
            "subnet_id": "subnet-0e570cf4b4cdaf73c",
            "tags": {
              "Name": "MyProject-NAT"
            },
            "tags_all": {
              "Name": "MyProject-NAT"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.pub-subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:144063462472:subnet/subnet-0f1ddd96bb4ad54d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "190.160.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1ddd96bb4ad54d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "144063462472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyProjectPrivate-Sub-0"
            },
            "tags_all": {
              "Name": "MyProjectPrivate-Sub-0"
            },
            "vpc_id": "vpc-05a9b070323aad98c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ]
          ],
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:144063462472:subnet/subnet-0f75d9c5a4758d275",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "190.160.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f75d9c5a4758d275",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "144063462472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyProjectPrivate-Sub-1"
            },
            "tags_all": {
              "Name": "MyProjectPrivate-Sub-1"
            },
            "vpc_id": "vpc-05a9b070323aad98c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ]
          ],
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:144063462472:subnet/subnet-0e56c9d9e1d7ffef7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "190.160.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e56c9d9e1d7ffef7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "144063462472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyProjectPrivate-Sub-2"
            },
            "tags_all": {
              "Name": "MyProjectPrivate-Sub-2"
            },
            "vpc_id": "vpc-05a9b070323aad98c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "cidr_block"
              }
            ]
          ],
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:144063462472:subnet/subnet-0e570cf4b4cdaf73c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "190.160.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e570cf4b4cdaf73c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "144063462472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyProject-Public-Sub-0"
            },
            "tags_all": {
              "Name": "MyProject-Public-Sub-0"
            },
            "vpc_id": "vpc-05a9b070323aad98c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:144063462472:subnet/subnet-0bb6d3dd4ce2732d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "190.160.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb6d3dd4ce2732d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "144063462472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyProject-Public-Sub-1"
            },
            "tags_all": {
              "Name": "MyProject-Public-Sub-1"
            },
            "vpc_id": "vpc-05a9b070323aad98c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:144063462472:subnet/subnet-08433e1963c822b78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "190.160.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08433e1963c822b78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "144063462472",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MyProject-Public-Sub-2"
            },
            "tags_all": {
              "Name": "MyProject-Public-Sub-2"
            },
            "vpc_id": "vpc-05a9b070323aad98c"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:144063462472:vpc/vpc-05a9b070323aad98c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "190.160.0.0/16",
            "default_network_acl_id": "acl-031e29443c97c6ffb",
            "default_route_table_id": "rtb-08aa2215e3194016d",
            "default_security_group_id": "sg-083c58a7973c2b261",
            "dhcp_options_id": "dopt-0e735a1a298de57b1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05a9b070323aad98c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08aa2215e3194016d",
            "owner_id": "144063462472",
            "tags": {
              "Name": "MyVPC"
            },
            "tags_all": {
              "Name": "MyVPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.Route_table[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Priv-Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:144063462472:route-table/rtb-0a5926cc460a8551b",
            "id": "rtb-0a5926cc460a8551b",
            "owner_id": "144063462472",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d0284c69b1aee0e8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyProject-Priv-Route"
            },
            "tags_all": {
              "Name": "MyProject-Priv-Route"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a9b070323aad98c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.NAT",
            "aws_subnet.pub-subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.Route_table[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Pub-Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-0186dcc385d7b4080",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-072bbaac5b6fab4ef",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyProject-Pub-Route"
            },
            "tags_all": {
              "Name": "MyProject-Pub-Route"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a9b070323aad98c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IG",
            "aws_subnet.pub-subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.Route_table[1]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Priv-Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:144063462472:route-table/rtb-0f0f2cc44c09048dd",
            "id": "rtb-0f0f2cc44c09048dd",
            "owner_id": "144063462472",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d0284c69b1aee0e8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyProject-Priv-Route"
            },
            "tags_all": {
              "Name": "MyProject-Priv-Route"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a9b070323aad98c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.NAT",
            "aws_subnet.pub-subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.Route_table[1]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Pub-Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-019a07ee88e7241b9",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-072bbaac5b6fab4ef",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyProject-Pub-Route"
            },
            "tags_all": {
              "Name": "MyProject-Pub-Route"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a9b070323aad98c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IG",
            "aws_subnet.pub-subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.Route_table[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private-Sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0030d240797bf2a0c",
            "route_table_id": "rtb-0f0f2cc44c09048dd",
            "subnet_id": "subnet-0f1ddd96bb4ad54d0"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.NAT",
            "aws_subnet.priv-subnets",
            "aws_subnet.pub-subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.az",
            "module.Route_table.aws_route_table.Priv-Route"
          ]
        }
      ]
    },
    {
      "module": "module.Route_table[2]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Priv-Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:144063462472:route-table/rtb-0a1d74ebb5c18cf00",
            "id": "rtb-0a1d74ebb5c18cf00",
            "owner_id": "144063462472",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d0284c69b1aee0e8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyProject-Priv-Route"
            },
            "tags_all": {
              "Name": "MyProject-Priv-Route"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a9b070323aad98c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.NAT",
            "aws_subnet.pub-subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "module": "module.Route_table[2]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Pub-Route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-005f94804826e298f",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-072bbaac5b6fab4ef",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyProject-Pub-Route"
            },
            "tags_all": {
              "Name": "MyProject-Pub-Route"
            },
            "timeouts": null,
            "vpc_id": "vpc-05a9b070323aad98c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IG",
            "aws_subnet.pub-subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    }
  ]
}